# gmail_sender

./: .gitignore  README.md  build.py  cursor_gmail.md  dummy.env  main.py  main_gui.py  plan.md  plan_GUI.md  pyproject.toml  requiremensts.txt
src/: __init__.py  config.py  email_sender.py  utils.py
src/gui/: __init__.py  email_form.py  main_window.py  settings.py  widgets.py
tests/: __init__.py  test_config.py  test_email_sender.py
